# solara-rover

./: .gitignore  LICENSE  README  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: envtests.yml
calibration/: wheel_calibration.yaml
env_data/: collector.py  config.yaml  requirements.txt
env_data/sensors/: environment.py  light.py  requirements.txt  thermal.py
esp32_firmware/: .gitignore  esp32_simulator.py  platformio.ini
esp32_firmware/src/: main.cpp
mqtt-publisher/: pyvenv.cfg
pico_firmware/: pid_controller.h  platformio.ini
pico_firmware/src/: claw_controller.cpp  claw_controller.h  encoder.cpp  encoder.h  main.cpp  motor_driver HPcopy.cpp  motor_driver.cpp  motor_driver.h  pid_controller.cpp  solara-rover.code-workspace  ultrasonic.cpp  ultrasonic_copy.cpp
pico_firmware/src/claw_controller/: CMakeLists.txt
pico_firmware/src/claw_controller2/: CMakeLists.txt  claw_controller2.cpp  claw_controller2.h
ros2_ws/src/rover_bringup/: package.xml  setup.py
ros2_ws/src/rover_bringup/launch/: solara.launch.py
ros2_ws/src/rover_description/: CMakeLists.txt
ros2_ws/src/rover_description/urdf/: chassis.xacro  sensor.urdf.xacro  solara.urdf.xacro  wheels.xacro
ros2_ws/src/rover_drivers/: package.xml  setup.cfg  setup.py
ros2_ws/src/rover_drivers/launch/: lidar.launch.py  sensors_launch.py  test_fake_lidar.launch.py
ros2_ws/src/rover_drivers/rover_drivers/: fake_scan_pub.py  gps_driver.py  lidar_obstacle_node.py
ros2_ws/src/rover_drivers/scripts/: claw_driver.py  gps_driver.py  imu_driver.py  test_bno.py
ros2_ws/src/rover_navigation/: package.xml  setup.py
ros2_ws/src/rover_navigation/config/: efk.yaml  ekf.yaml  nav2_params.yaml  navsat_transform.yaml  slam_params.yaml
ros2_ws/src/rover_navigation/launch/: efk.launch.py  slam.launch.py
rover_description/: CMakeLists.txt  package.xml
rover_description/launch/: state_publishers.launch.py
rover_description/urdf/: solara.urdf.xacro
rover_drivers/: package.xml  setup.py
rover_drivers/launch/: sensors_launch.py
rover_drivers/scripts/: imu_driver.py  motor_bridge.py
rover_navigation/config/: garden_beds.yaml
rover_navigation/launch/: navigation.launch.py
rover_navigation/scripts/: bed_alignment.py  mission_planner.py  waypoint_controller.py
