
<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rover_drivers</name>
  <version>0.1.0</version>
  <description>Hardware drivers for agricultural rover sensors</description>
  
  <maintainer email="swe.ucr@gmail.com">SWE Team Tech</maintainer>
  <license>MIT</license>
  
  <buildtool_depend>ament_python</buildtool_depend>
  
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  
  <exec_depend>rplidar_ros</exec_depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
